1.34    2011-04-25

- This release is based on version 2011g of the Olson database. This release
  includes changes for Egypt.


1.33    2011-04-11

- This release is based on version 2011f of the Olson database. This release
  includes changes for the Falkland Islands.


1.32    2011-04-01

- This release is based on version 2011e of the Olson database. This release
  includes changes for Morocco and Chile.


1.31    2011-03-18

- Updates for Win32 time zones. Patch by David Pinkowitz.


1.30    2011-03-14

- This release is based on version 2011d of the Olson database. This release
  includes changes for Samoa, Turkey, and Cuba.


1.29    2011-03-07

- This release is based on version 2011c of the Olson database. This release
  includes new zones, America/Sitka and America/Metlakatla, as well as changes
  for Alaska and Chile.


1.28    2011-02-07

- This release is based on version 2011b of the Olson database. This release
  includes a new zone, America/North_Dakota/Beulah.


1.27    2011-01-19

- This release is based on version 2011a of the Olson database. This release
  includes historical updates for Australia and Hawaii.


1.26    2010-11-20

- Fix release engineering bugs. The last release had both a Build.PL and
  Makefile.PL, but the former did not list all the prereqs. Also, dynamic
  prereqs for Win32 and HPUX were not being added properly.


1.25    2010-11-20

- Attempting to determine the local time zone while inside a sort subroutine
  could cause an error "Can't return outside a subroutine". This was caused by
  stack corruption that happens when an eval "use $module" fails. Reported by
  Andy Jones. RT #63106.


1.24    2010-10-25

- This release is based on version 2010n of the Olson database. This release
  includes updates for Fiji.

- All modules in the distro now have the same $VERSION.


1.23    2010-10-25

- This release is based on version 2010n of the Olson database. This release
  includes updates for Fiji.


1.22    2010-09-27
