@@ -3,6 +3,9 @@
 - This release is based on version 2011g of the Olson database. This release
   includes changes for Egypt.
 
+- DateTime::TimeZone::Floating and DateTime::TimeZone::UTC are now singletons,
+  since their internal state never changes.
+
 
 1.33    2011-04-11
 
